[gd_scene format=3 uid="uid://c6k1fckwuv5fa"]

[ext_resource type="Script" uid="uid://boc0nx7bj34jm" path="res://Scripts/EditorPage.gd" id="1_uht3o"]

[node name="EditorPage" type="Control" unique_id=783348700]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uht3o")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=426529025]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Header" type="HBoxContainer" parent="VBoxContainer" unique_id=22368480]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer/Header" unique_id=727766000]
layout_mode = 2
text = "BACK"

[node name="Label" type="Label" parent="VBoxContainer/Header" unique_id=776960912]
layout_mode = 2

[node name="Space" type="Container" parent="VBoxContainer/Header" unique_id=1987703640]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="LoadButton" type="Button" parent="VBoxContainer/Header" unique_id=226008626]
layout_mode = 2
text = "Load File"

[node name="SaveButton" type="Button" parent="VBoxContainer/Header" unique_id=1324921233]
layout_mode = 2
text = "Save File
"

[node name="ExportButton" type="Button" parent="VBoxContainer/Header" unique_id=2141135400]
layout_mode = 2
text = "Export"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer" unique_id=1190938783]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer" unique_id=330752787]
layout_mode = 2
